# HMI_SDK_LIB

./: CMakeLists.txt  LICENSE  README.md  Unit_Test_Instruction-QT_HMI_LIB_v0.0.1.docx  releaseNote.xlsx
HMI_SDK_LIB/hmi_sdk/connect/: CMakeLists.txt
ReferenceDesign/SampleQTHMI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  SampleQTHMI.pro  build.sh  main.cpp
ReferenceDesign/SampleQTHMI/HMIFrameWork/: App.h  AppConfig.h  AppManager.cpp  AppManager.h  CMakeLists.txt  CView.h  GstPlayerMessage.cpp  HMIFrameWork.h  Interface.h  ViewFactory.h  log_interface.cpp  log_interface.h
ReferenceDesign/SampleQTHMI/HMIWidgets/: AlbumCoverWidget.cpp  AlbumCoverWidget.h  AppListWidget.cpp  AppListWidget.h  CAppButton.cpp  CAppButton.h  CCButton.h  CComboBox.cpp  CComboBox.h  CListWidgetItem.cpp  CMakeLists.txt  CPushButton.cpp  CPushButton.h  CSlider.cpp  CSlider.h  CVListWidget.cpp  DateTimePicker.cpp  DateTimePicker.h  ListDelegate.h  ListScroller.cpp  ListScroller.h  PhonePicker.cpp  PhonePicker.h  Picker.cpp  ScrollText.cpp  SliderSelect.cpp  SliderSelect.h  TopNavigateWidget.cpp
ReferenceDesign/SampleQTHMI/Home/: CMakeLists.txt
ReferenceDesign/SampleQTHMI/Media/: CMakeLists.txt
ReferenceDesign/SampleQTHMI/Navigation/: CMakeLists.txt
ReferenceDesign/SampleQTHMI/Phone/: CMakeLists.txt
ReferenceDesign/SampleQTHMI/Prompt/: CMakeLists.txt
ReferenceDesign/SampleQTHMI/SDLApps/: CMakeLists.txt
ReferenceDesign/SampleQTHMI/VR/: CMakeLists.txt
SDL_Qt_HMI/: AppLayer.cpp  AppLayer.h  AppViewManager.cpp  AppViewManager.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  SDL_Qt_HMI.pro  main.cpp  main.h
SDL_Qt_HMI/HMIFrameWork/: App.cpp  App.h  AppConfig.h  AppManager.cpp  AppManager.h  CView.cpp  GstPlayer.cpp  GstPlayer.h  GstPlayerMessage.cpp  GstPlayerMessage.h  HMIFrameWork.cpp  HMIFrameWork.h  Interface.h  ViewFactory.cpp  log_interface.h
SDL_Qt_HMI/HMIWidgets/: AlbumCoverWidget.cpp  CCButton.cpp  CCButton.h  CComboBox.cpp  CComboBox.h  CComboBoxDelegate.cpp  CComboBoxDelegate.h  CListWidgetItem.cpp  CListWidgetItem.h  CPushButton.cpp  CPushButton.h  CRotationWidget.cpp  CRotationWidget.h  CVListWidget.cpp  CVListWidget.h  ListDelegate.cpp  ListDelegate.h  ListScroller.cpp  PhonePicker.cpp  PhonePicker.h  Picker.h  ScrollText.h  TopNavigateWidget.h  WidgetsCommon.h
SDL_Qt_HMI/HVAC/: CMakeLists.txt
SDL_Qt_HMI/HVAC/Source/: HVACImages.qrc
SDL_Qt_HMI/HVAC/UI/: HVACFrontView.cpp  HVACFrontViewOff.cpp  HVACRearView.cpp  HVACRearView.h  HVACRearViewOff.cpp
SDL_Qt_HMI/HVAC/app/: HVAC.cpp
SDL_Qt_HMI/HVAC/data/: HVACData.cpp  HVACData.h
SDL_Qt_HMI/Home/Factory/: HomeVFactory.cpp
SDL_Qt_HMI/Home/Source/: HomeImages.qrc
SDL_Qt_HMI/Home/UI/: HomeView.cpp  HomeView.h  HomeWindow.cpp  HomeWindow.h
SDL_Qt_HMI/Home/app/: Home.cpp  Home.h
SDL_Qt_HMI/Media/Factory/: MediaVFactory.h
SDL_Qt_HMI/Media/app/: Media.cpp
SDL_Qt_HMI/Message/: CMakeLists.txt
SDL_Qt_HMI/Message/Factory/: MessageVFactory.cpp  MessageVFactory.h
SDL_Qt_HMI/Message/UI/: MessageListView.cpp  MessageListView.h  MessagesNoNewInfoView.cpp  MessagesView.cpp
SDL_Qt_HMI/Message/app/: Message.cpp
SDL_Qt_HMI/Message/data/: MessageData.cpp
SDL_Qt_HMI/Navigation/Factory/: NavigationVFactory.h
SDL_Qt_HMI/Navigation/UI/: NavigationView.cpp  NavigationView.h
SDL_Qt_HMI/Navigation/app/: Navigation.cpp  Navigation.h
SDL_Qt_HMI/Phone/Factory/: PhoneVFactory.cpp
SDL_Qt_HMI/Phone/Source/: PhoneImages.qrc
SDL_Qt_HMI/Phone/UI/: CallingView.cpp  CallingView.h  ContactsDetailsView.cpp  ContactsDetailsView.h  ContactsView.cpp  ContactsView.h  KeyBoardView.cpp  KeyBoardView.h  PhoneWindow.cpp  PhoneWindow.h  RecentsView.cpp  RecentsView.h
SDL_Qt_HMI/Phone/app/: Phone.cpp  Phone.h
SDL_Qt_HMI/Phone/data/: PhoneData.cpp  PhoneData.h
SDL_Qt_HMI/PopUp/: CMakeLists.txt
SDL_Qt_HMI/PopUp/Factory/: PopUpVFactory.cpp
SDL_Qt_HMI/PopUp/UI/: PopUpBase.cpp  PopUpBase.h  PopUpViewUI.cpp  PopUpViewUI.h  PopupGeneralView.cpp  PopupGeneralView.h
SDL_Qt_HMI/PopUp/app/: PopUp.cpp  PopUp.h
SDL_Qt_HMI/Prompt/Source/: PromptImages.qrc
SDL_Qt_HMI/Prompt/UI/: PromptBase.cpp  PromptBase.h  PromptMessageView.cpp  PromptMessageView.h  PromptNavView.cpp  PromptNavView.h  PromptViewUI.cpp  PromptWindow.cpp
SDL_Qt_HMI/Prompt/app/: Prompt.cpp
SDL_Qt_HMI/QuickLanuch/: CMakeLists.txt
SDL_Qt_HMI/QuickLanuch/Factory/: QuickVFactory.cpp
SDL_Qt_HMI/QuickLanuch/Source/: QuickLanuchImages.qrc
SDL_Qt_HMI/QuickLanuch/UI/: QuickLanuchView.cpp  QuickLanuchView.h  QuickLanuchWindow.cpp  QuickLanuchWindow.h
SDL_Qt_HMI/QuickLanuch/app/: QuickLanuch.cpp  QuickLanuch.h
SDL_Qt_HMI/SDLApps/: CMakeLists.txt  Gen3UIManager.cpp  Gen3UIManager.h
SDL_Qt_HMI/SDLApps/Alert/: AlertView.h
SDL_Qt_HMI/SDLApps/AppListView/: AppListView.cpp  CAppButton.h
SDL_Qt_HMI/SDLApps/AudioPassThru/: AudioPassView.h
SDL_Qt_HMI/SDLApps/ChoiceSet/: ChoiceSet.cpp  ChoiceSet.h  ChoiceSetVR.cpp  ChoiceSetVR.h
SDL_Qt_HMI/SDLApps/CommandView/: CommandView.cpp  CommandView.h  CustomCombobox.h  CustomComboboxItem.cpp
SDL_Qt_HMI/SDLApps/Common/: AppBase.cpp  Button.h  CustomButton.cpp  CustomButton.h  CustomListView.cpp
SDL_Qt_HMI/SDLApps/Config/: Config.h
SDL_Qt_HMI/SDLApps/Data/: SDLAppsData.cpp
SDL_Qt_HMI/SDLApps/Factory/: SDLVFactory.cpp  SDLVFactory.h
SDL_Qt_HMI/SDLApps/ScrollableMessage/: ScollMsgView.h
SDL_Qt_HMI/SDLApps/Show/: GraphicSoftButtonShow.h  MainWidget.h  MediaShow.h
SDL_Qt_HMI/SDLApps/SliderView/: SliderView.h
SDL_Qt_HMI/SDLApps/Source/: SDLAppsImages.qrc
SDL_Qt_HMI/SDLApps/Template/: TemplateManager.cpp
SDL_Qt_HMI/SDLApps/Templates/: CMakeLists.txt  (+3 more)
SDL_Qt_HMI/StatusBar/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
hmi_sdk/app_data/: CMakeLists.txt
hmi_sdk/connect/: CMakeLists.txt
tools/: CMakeLists.txt
tools/jsoncpp/: CMakeLists.txt
tools/pthread4w/: CMakeLists.txt  _ptw32.h  config.h  errno.c  implement.h  need_errno.h  pthread.c  pthread_mutex_lock.c  pthread_mutex_unlock.c  pthread_win32_attach_detach_np.c  ptw32_getprocessors.c  ptw32_relmillisecs.c  sched_setaffinity.c
(+656 files in other folders)
